<resources>
    <string name="app_name">focus</string>
    <string name="my_feed">我的订阅</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_summary">在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。</string>
    <string name="error_tips">一个没有测试到错误发生了。这个错误可能是由于未知操作导致的数据库信息错误，你可以尝试重新启动应用。</string>
    <string name="test_content">在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。在我还算年轻，记忆仍然鲜明的时候，我曾有几回试着想写直子。可是当时我却一行也写不下去。</string>


    <!--偏好设置-->
    <string name="pref_key_primary_info">pref_key_primary_info</string>
    <string name="pref_title_primary_info">基本信息</string>
    <string name="pref_key_primary_setting">pref_key_primary_setting</string>
    <string name="pref_title_primary_setting">基本设置</string>
    <string name="pref_key_primary_about">pref_key_primary_about</string>
    <string name="pref_title_primary_about">关于与帮助</string>
    <string name="pref_key_feed_num">pref_key_feed_num</string>
    <string name="pref_title_feed_num">订阅数目</string>
    <string name="pref_key_use_internet_while_open">pref_key_use_internet_while_open</string>
    <string name="pref_title_use_internet_while_open">首次打开自动获取数据</string>
    <string name="pref_summary_lower_flow_mode">初次启动app时，自动获取最新数据，选择否，则只加载本地数据，需要手动刷新</string>
    <string name="pref_key_licence">pref_key_licence</string>
    <string name="pref_title_licence">开源许可</string>
    <string name="pref_key_update">pref_key_update</string>
    <string name="pref_title_update">检查更新</string>
    <string name="pref_summary_update">1.0.0</string>
    <string name="pref_key_about">pref_key_about</string>
    <string name="pref_title_about">关于作者</string>
    <string name="pref_key_enhance_setting">pref_key_enhance_setting</string>
    <string name="pref_title_enhance_setting">高级设置</string>
    <string name="pref_key_backup">pref_key_backup</string>
    <string name="pref_title_backup">备份</string>
    <string name="pref_key_recover">pref_key_recover</string>
    <string name="pref_title_recover">恢复数据</string>
    <string name="pref_summary_backup">备份你的订阅数据，以便恢复。（这里备份的数据库，和导出OPML不一样，备份数据库包括所有已读和收藏状态）</string>
    <string name="pref_summary_recover">恢复数据</string>
    <string name="pref_key_font_size">pref_key_font_size</string>
    <string name="pref_title_font_size">字体大小</string>
    <string name="pref_summary_font_size">调整适合你的文章字体大小</string>
    <string name="pref_key_theme">pref_key_theme</string>
    <string name="pref_title_theme">主题选择</string>
    <string name="pref_summary_theme">多种主题选择你喜欢的😍</string>
    <string name="pref_key_load_choice">pref_key_load_choice</string>
    <string name="pref_title_load_choice">选择自动加载项</string>
    <string name="pref_summary_load_choice">上面设置选择否，这里可以选择首次打开应用获取数据的订阅列表</string>
    <string name="pref_title_rsshub_choice">RssHub源选择</string>
    <string name="pref_key_rsshub_choice">pref_key_rsshub_choice</string>
    <string name="pref_summary_rsshub_choice">官方RssHub可能不够稳定，可以使用moerats大佬自建的RssHub源</string>
    <string name="pref_key_auto_name">pref_key_auto_name</string>
    <string name="pref_title_auto_name">订阅名称自动设置</string>
    <string name="pref_summary_auto_name">开启该选项，订阅名称自动使用网络请求的页面标题（有一次网络请求后），自己手动设置的名称将被覆盖</string>
    <string name="card_content">foucs是什么？三角形是最稳定的结构，所以logo选择一个三角形。如果仅仅是RSS订阅器，我相信Android端的inoreader和IOS端的Reader已经足够优秀。\n\n

我第一次看到DIYgod开发的「RSSHub」，深深被其强大所震撼，是我第一次接触RSS这种“新的”阅读方式。\n\n

我也是即刻的早期用户，使用过即刻的“实验室”功能，当时的“订阅自己喜欢的微博微博”的功能给我极大的方便。我不用时刻刷新，也能及时看到关注的消息。但即刻在规模扩大后去掉了这个功能。\n\n

算法、社交是现在所有主要资讯媒体的“利器”。但随着持续的使用，我发现这种所谓的“智能”仿佛是一种“强迫式”的知识获取。表面上看我们选择我们“感兴趣”的内容，实际上是肤浅、标题党、无营养价值的内容。我们浪费了太多时间在这些看过就忘的“有趣内容”上了。\n\n

很快转向了RSS订阅方式。抖音利弊已经谈的够多了。该平台我也有一些很感兴趣的用户，感兴趣的内容。通过RSSHub可以获取到大部分国内媒体商的订阅。但是让我感觉不便的是，我每次获取订阅，都得去RSSHub的文档上寻找，然后获取连接中的参数，再拼接在一起，这让我感到有点疲惫。毕竟RSS对于普通用户来说，操作还是很复杂。\n\n

这就是Focus诞生的初衷。简化获取国内媒体的操作，即时获取关注的通知。\n\n

第一个目标已经基本完成，我爬取了RSSHub的所有接口，然后入库，所以现在应该比之前要方便一些。当然我还在想办法尽可能简化。\n\n

第二个目标暂时还没能完成，Focus获取数据需要自己打开应用，手动获取更新，不会在后台定时更新，并及时推送。这个功能后面有望解决。\n\n

现在我的手机除RSS订阅方式，没有任何其他内容应用。我希望可以主动获取内容，而非推荐，仅此而已。\n\n

如果你喜欢Focus，欢迎可以向任何人推荐，感谢！

也欢迎任何金额的打赏，都是我不断前进的动力~

同时感谢RSSHub开源项目以及moerats提供的自建RSSHub源（理论上会比官方源更稳定一些）。
</string>
    <string name="pref_key_own_rsshub">pref_key_own_rsshub_choice</string>
    <string name="pref_title_own_rsshub">自定义RSSHub源</string>
    <string name="pref_summary_own_rsshub">如果上面的设置项选择了自定义，而且你有自己搭建的RSSHub源，可以在这里填写</string>
    <string name="pref_key_not_pull_to_open_link">pref_key_not_pull_to_open_link</string>
    <string name="pref_title_not_pull_to_open_link">禁止上拉访问源网站</string>
    <string name="pref_summary_not_pull_to_open_link">文章中默认开启该手势，你可以关闭防止误触</string>
    <string name="pref_key_database_version">pref_key_database_version</string>
    <string name="pref_title_database_version">数据库版本</string>
    <string name="pref_summary_database_version">10</string>
    <string name="pref_key_donate">pref_key_donate</string>
    <string name="pref_title_donate">捐赠</string>
    <string name="pref_summary_donate">这不是必须的，捐赠可以给开发者更多动力更新。你也可以使用任何其他方式表达你对该应用的喜爱💝</string>


    <string name="pref_key_fix_database">pref_key_fix_database</string>
    <string name="pref_title_fix_database">修复数据库</string>
    <string name="pref_summary_fix_database">当你的数据出现异常的时候（比如收藏内容丢失），可以尝试使用该工具</string>

    <string name="pref_key_clean_database">pref_key_clean_database</string>
    <string name="pref_title_clean_database">清理数据库</string>
    <string name="pref_summary_clean_database">你可以控制当前数据库文章的数量，以便保证文章数目在可控范围内</string>
    <string name="pref_summary_about">关于Focus和其他</string>
    <string name="pref_key_not_double_click_to_star">pref_key_not_double_click_to_star</string>
    <string name="pref_title_not_double_click_to_star">禁止双击收藏文章</string>
    <string name="pref_summary_not_double_click_to_star">文章中默认双击文章收藏当前文章，你可以关闭防止误触</string>
    <string name="pref_key_not_double_click_to_top">pref_key_not_double_click_to_top</string>
    <string name="pref_title_not_double_click_to_top">文章中双击顶栏返回文章顶部</string>
    <string name="pref_summary_not_double_click_to_top">文章中默认双击顶栏返回文章顶部，你可以关闭该特性</string>
    <string name="pref_key_five_star">pref_key_five_star</string>
    <string name="pref_title_five_star">五星好评</string>
    <string name="pref_summary_five_star">觉得好用吗？您的鼓励是我前进的动力！</string>

    <string name="pref_key_not_image_in_list">pref_key_not_image_in_list</string>
    <string name="pref_title_not_image_in_list">无图列表</string>
    <string name="pref_summary_not_image_in_list">开启后，首页显示文章列表不会显示图片</string>

    <string name="pref_key_refresh_interval">pref_key_refresh_interval</string>
    <string name="pref_title_refresh_interval">后台定时刷新间隔</string>
    <string name="pref_summary_refresh_interval">【试验功能】开启后，会消耗少许电量，会在通知栏显示一个守护进程，标志该服务正常，如果没有该通知，标志服务未正常运行。</string>

    <string name="pref_key_only_use_wifi">pref_key_only_use_wifi</string>
    <string name="pref_title_only_use_wifi">请求只使用WiFi</string>
    <string name="pref_summary_only_use_wifi">开启后，在非WIFI情况下不会请求数据</string>

    <string name="pref_key_not_use_chrome">pref_key_not_use_chrome</string>
    <string name="pref_title_not_use_chrome">浏览器不使用Chrome内核</string>
    <string name="pref_summary_not_use_chrome">如果你的手机内有Chrome内核的浏览器，文章内链接优先默认调用Chrome内核，你可以关闭该选项</string>


</resources>
